<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ACBF</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="tweet">Tweet</string>
    <string name="drink">Drink</string>
    <string name="loading_breweries">Loading Breweries</string>
    <string name="website">Website</string>
    <string name="twitter">Twitter</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="weight">Weight:</string>
    <string name="name">Name:</string>
    
    <string name="gender">Gender</string>
        
    <string name="email">Email Address:</string>
            
    <string name="password">Password:</string>
                
    <string name="register">Register</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
        
                                           
</resources>
