<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/hello_world"
        android:textSize="40sp" />
    
    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_alignParentLeft="true"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    
	<EditText
	    android:id="@+id/name_edit"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentRight="true"
	    android:layout_toRightOf="@+id/submitButton"
	    android:layout_above="@+id/gender"
	    android:ems="10"
	    android:inputType="textPersonName" />

    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/name"
        android:layout_centerVertical="true"
        android:text="@string/gender"
        android:textAppearance="?android:attr/textAppearanceLarge" />


    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gender"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female" />
    </RadioGroup>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup1"
        android:layout_alignParentLeft="true"
        android:text="@string/email"
        android:textAppearance="?android:attr/textAppearanceLarge" />

   	<EditText
	    android:id="@+id/email_edit"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_toRightOf="@+id/email"
	    android:layout_alignParentRight="true"
  	    android:layout_above="@+id/password"
	    android:ems="10"
	    android:inputType="textEmailAddress" />
    
	<TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_alignParentLeft="true"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceLarge" />
	
	<EditText
	    android:id="@+id/password_edit"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_toRightOf="@+id/password"
   	    android:layout_above="@+id/submitButton"
	    
	    android:layout_alignParentRight="true"
	    android:ems="10"
	    android:inputType="textPassword" />

	<Button
	    android:id="@+id/submitButton"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/email_edit"
	    android:layout_alignParentRight="true"
	    android:layout_below="@+id/password"
	    android:text="@string/register" />

</RelativeLayout>